--- a/sevendayshpc/day5/Makefile
+++ b/sevendayshpc/day5/Makefile
@@ -10,6 +10,7 @@ gen: $(PROGRAM)
 	@mkdir data/
 	./$(PROGRAM)
 	./image.rb
+	(cd data && convert -delay 5 conf*png conf.gif)
 
 $(PROGRAM): $(OBJS)
 	$(CC) -o $(PROGRAM) $(OBJS) $(LIBS)
