--- a/drken-book/Cargo.toml
+++ b/drken-book/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+proconio = "0.4.5"
 
 [[bin]]
 name = "1-meiro"
