--- a/drken-book/Cargo.toml
+++ b/drken-book/Cargo.toml
@@ -23,3 +23,11 @@ path = "src/3-abc51b.rs"
 [[bin]]
 name = "3-abc45c"
 path = "src/3-abc45c.rs"
+
+[[bin]]
+name = "5-frog1"
+path = "src/5-frog1.rs"
+
+[[bin]]
+name = "5-knapsak1"
+path = "src/5-knapsak1.rs"
