--- a/drken-book/Cargo.toml
+++ b/drken-book/Cargo.toml
@@ -29,5 +29,9 @@ name = "5-frog1"
 path = "src/5-frog1.rs"
 
 [[bin]]
-name = "5-knapsak1"
-path = "src/5-knapsak1.rs"
+name = "5-knapsack1"
+path = "src/5-knapsack1.rs"
+
+[[bin]]
+name = "5-edit_distance"
+path = "src/5-edit_distance.rs"
