--- a/drken-book/Cargo.toml
+++ b/drken-book/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+itertools = "0.11.0"
 proconio = "0.4.5"
 
 [[bin]]
@@ -47,3 +48,19 @@ path = "src/5-frog2.rs"
 [[bin]]
 name = "5-contest"
 path = "src/5-contest.rs"
+
+[[bin]]
+name = "6-minpair"
+path = "src/6-minpair.rs"
+
+[[bin]]
+name = "6-abc23d"
+path = "src/6-abc23d.rs"
+
+[[bin]]
+name = "6-1"
+path = "src/6-1.rs"
+
+[[bin]]
+name = "6-abc77c"
+path = "src/6-abc77c.rs"
