--- a/drken-book/Cargo.toml
+++ b/drken-book/Cargo.toml
@@ -65,3 +65,15 @@ path = "src/6-1.rs"
 [[bin]]
 name = "6-abc77c"
 path = "src/6-abc77c.rs"
+
+[[bin]]
+name = "7-interval"
+path = "src/7-interval.rs"
+
+[[bin]]
+name = "7-agc9a"
+path = "src/7-agc9a.rs"
+
+[[bin]]
+name = "7-1"
+path = "src/7-1.rs"
