--- a/adventofcode/2023/Cargo.toml
+++ b/adventofcode/2023/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+num = "0.4.1"
 proconio = "0.4.5"
 rayon = "1.8.0"
